--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-grid-system": "^2.7.0",
-    "react-tap-event-plugin": "^2.0.1"
+    "react-redux": "^5.0.3",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
